Update hover background image and fix selector spacing for squares in Basic_Style.css

--- a/Basic_Style.css
+++ b/Basic_Style.css
@@ -63,19 +63,19 @@ h1{
 }
 
 .container .squares:nth-child(-n+4) :hover{
-    background-image: url("../Icon Folder/icon.png");
+    background-image: url("../Icon Folder/icon2.png");
 }
 
-.squares:nth-child(1) :hover{
+.squares:nth-child(1):hover{
     background-color: #13b4ff;
 }
-.squares:nth-child(2) :hover{
+.squares:nth-child(2):hover{
     background-color: #d861af;
 }
-.squares:nth-child(3) :hover{
+.squares:nth-child(3):hover{
     background-color: #81205f;
 }
-.squares:nth-child(4) :hover{
+.squares:nth-child(4):hover{
     background-color: #77b800;
 }
 
